# reddit_moderator_openenv_hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  content_generator.py  inference.py  models.py  openenv.yaml  pyproject.toml  reward.py
server/: __init__.py  _playground.py  app.py  reddit_mod_environment.py
tests/: test_environment.py
